syntax = "proto2";

option java_package = "com.example.protos";

message DefaultsRequired {
  required int32 i32Value = 1;
  required int64 i64Value = 2;
  required uint32 u32Value = 3;
  required uint64 u64Value = 4;
  required double dValue = 5;
  required float fValue = 6;
  required bool bValue = 7;
  required string sValue = 8;
  required bytes binaryValue = 9;
}

message DefaultsOptional {
  optional int32 i32Value = 1;
  optional int64 i64Value = 2;
  optional uint32 u32Value = 3;
  optional uint64 u64Value = 4;
  optional double dValue = 5;
  optional float fValue = 6;
  optional bool bValue = 7;
  optional string sValue = 8;
  optional bytes binaryValue = 9;
}
