syntax = "proto3";

option java_package = "com.example.protos";

message DefaultsV3 {
  int32 i32Value = 1;
  int64 i64Value = 2;
  uint32 u32Value = 3;
  uint64 u64Value = 4;
  double dValue = 5;
  float fValue = 6;
  bool bValue = 7;
  string sValue = 8;
  bytes binaryValue = 9;
}
